# django-coralogix-otel

./: .env.example  .gitignore  CHANGELOG.md  CORRECOES.md  CRUSH.md  ENTRYPOINT.md  EXAMPLES.md  GUNICORN.md  IMPLEMENTATION.md  INSTALACAO.md  INSTALLATION.md  LICENSE  LOGGING_FIX.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  PUBLISH.md  README.md  RELATORIO_ANALISE_INTEGRACOES.md  SIMPLIFIED.md  TROUBLESHOOTING.md  entrypoint.sh  example_settings.py  gunicorn.config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_dev.sh  simple_otel_config.py  test_logging.py  test_settings.py
django_coralogix_otel/: __init__.py  apps.py  config.py  entrypoint.py  entrypoint.sh  gunicorn_config.py  gunicorn_config.py.old  logging_config.py  middleware.py  otel_config.py  simple_logging.py  utils.py
django_coralogix_otel/management/: __init__.py
django_coralogix_otel/management/commands/: __init__.py  check_opentelemetry.py  copy_gunicorn_config.py  otel_health.py  otel_run.py
docs/: KAFKA_INTEGRATION.md
examples/: conditional_initialization_example.py  entrypoint_example.py  gunicorn_integration_example.py  usage_example.py
scripts/: django-coralogix-otel-run  entrypoint.sh  setup_gunicorn_config.sh
test_project/: manage.py
test_project/test_app/: __init__.py  urls.py
test_project/test_project/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_middleware.py  test_middleware_fix.py
