[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-coralogix-otel"
authors = [
    {name = "Vert Capital Dev Team", email = "dev@vert-capital.com"},
]
description = "Auto-instrumentação OpenTelemetry para Django com Coralogix"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
keywords = ["django", "opentelemetry", "coralogix", "telemetry", "monitoring", "tracing", "metrics"]
dependencies = [
    "opentelemetry-distro[otlp]>=0.47b0",
    "opentelemetry-instrumentation>=0.47b0",
    "opentelemetry-instrumentation-django>=0.47b0",
    "opentelemetry-instrumentation-psycopg2>=0.47b0",
    "opentelemetry-instrumentation-requests>=0.47b0",
    "opentelemetry-instrumentation-logging>=0.47b0",
    "opentelemetry-instrumentation-kafka-python>=0.47b0",
    "opentelemetry-instrumentation-wsgi>=0.47b0",
    "opentelemetry-instrumentation-asgi>=0.47b0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/vert-capital/django-coralogix-otel"
Repository = "https://github.com/vert-capital/django-coralogix-otel"
Documentation = "https://github.com/vert-capital/django-coralogix-otel#readme"
"Bug Tracker" = "https://github.com/vert-capital/django-coralogix-otel/issues"

[tool.setuptools_scm]
write_to = "django_coralogix_otel/_version.py"

[tool.setuptools.packages.find]
include = ["django_coralogix_otel*"]

[tool.setuptools.package-data]
django_coralogix_otel = ["entrypoint.sh"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["migrations"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=django_coralogix_otel --cov-report=html --cov-report=term-missing"